--- a/Python/~Laprak/Pertemuan_1.ipynb
+++ b/Python/~Laprak/Pertemuan_1.ipynb
@@ -446,14 +446,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " pythpn adalah bahasa yang keren\n"
+      " python adalah bahasa yang keren\n"
      ]
     }
    ],
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -607,11 +607,7 @@
       "5\n",
       "-1\n",
       "12\n",
-      "0.8\n",
-      "1\n",
-      "100\n",
-      "3\n",
-      "<class 'int'>\n"
+      "0.8\n"
      ]
     }
    ],
@@ -628,18 +624,37 @@
     "# pembagian\n",
     "print(4 / 5)\n",
     "# sisa bagi\n",
-    "print(10 % 3)\n",
-    "# Pangkat\n",
-    "print(10**2)\n",
-    "# pembagian bulat\n",
-    "print(10//3)\n",
-    "print(type(10//3))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "100\n",
+      "3\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(10 % 3)\n",
+    "# Pangkat\n",
+    "print(10**2)\n",
+    "# pembagian bulat\n",
+    "print(10//3)\n",
+    "print(type(10//3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +680,18 @@
     "a += 5\n",
     "a += 5\n",
     "\n",
-    "print(a)"
+    "print(a)\n",
+    "\n",
+    "# Kali sama dengan \n",
+    "a = 10\n",
+    "a *= 5\n",
+    "print (a)\n",
+    "\n",
+    "# Pembagian sama dengan\n",
+    "a = 10\n",
+    "a /= 5\n",
+    "\n",
+    "print(a)\n"
    ]
   },
   {
@@ -691,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -702,16 +728,11 @@
      ]
     }
    ],
-   "source": [
-    "# Kali sama dengan \n",
-    "a = 10\n",
-    "a *= 5\n",
-    "print (a)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -722,13 +743,7 @@
      ]
     }
    ],
-   "source": [
-    "# Pembagian sama dengan\n",
-    "a = 10\n",
-    "a /= 5\n",
-    "\n",
-    "print(a)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1233,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1252,6 +1267,34 @@
     "print(a is b)\n",
     "print(a == b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kelompok\n"
+     ]
+    }
+   ],
+   "source": [
+    "def aloha():\n",
+    "    return \"kelompok\"\n",
+    "\n",
+    "my_name = aloha()\n",
+    "print(my_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
