--- a/Python/~Laprak/Pertemtuan_4.ipynb
+++ b/Python/~Laprak/Pertemtuan_4.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8fc43b58",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
     "a = 30\n",
     "b = 20\n",
     "\n",
-    "if a > b: print(' a lebih besar dari b')"
+    "print (' a lebih besar dari b') if a > b else print(\" a lebih kecil dari b \")"
    ]
   },
   {
