--- a/Python/~Laprak/Pertemtuan_4.ipynb
+++ b/Python/~Laprak/Pertemtuan_4.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8fc43b58",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
     "a = 30\n",
     "b = 20\n",
     "\n",
-    "print (' a lebih besar dari b') if a > b else print(\" a lebih kecil dari b \")"
+    "if a > b print (' a lebih besar dari b')"
    ]
   },
   {
@@ -156,6 +156,50 @@
     "\n",
     "if a > b and c < a:\n",
     "    print(\"kedua kondisi benar\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "800b8074",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "arr = (1,2,3,4,5)\n",
+    "angka = numpy.array(arr,dtype=int)\n",
+    "\n",
+    "print(angka)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "98c8fb1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr = (1,2,3,4,5)\n",
+    "angka = np.array(arr,dtype=int)\n",
+    "\n",
+    "print(angka)"
    ]
   },
   {
